--- a/gb/16/2/19/n4643155.md
+++ b/gb/16/2/19/n4643155.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/jymmdk364/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/jymmdk364/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/jymmdk364/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/jymmdk364/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/jymmdk364/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/jymmdk364/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/jymmdk364/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/jymmdk364/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/jymmdk364/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/jymmdk364/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/jymmdk364/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/jymmdk364/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/jymmdk364/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/jymmdk364/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/jymmdk364/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/jymmdk364/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/jymmdk364/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/jymmdk364/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/jymmdk364/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/jymmdk364/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/jymmdk364/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/jymmdk364/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/jymmdk364/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/jymmdk364/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>公益也是一种转投资 让爱传出去</h2>
 
 <h6></h6>
@@ -36,57 +36,57 @@
 <p>殷清隆表示，公司发展到某个程度，就必须企业化经营了，不可能再用过去家庭式的管理方法，但可以交给专业，让公司永续发展。</p>
 <p>殷敏宽女士说，孩子们比我们懂得更多，也更了解美国社会，所以我们要学会放手，现在生意都交给下一代掌管。殷氏夫妇目前将 四间公司都交给大儿子打理，他们的二儿子是执业律师，也会帮忙处理公司相关的法律事务。</p>
 <p>殷清隆和太太现在每日生活的重心就是参与社团活动，积极回馈社会。这次台湾发生地震，他们夫妻俩二话不说就捐出了美金三万一千元整。</p>
-<p>殷清隆和殷敏宽借助驻洛杉矶台北经济文化办事处教育组长梁俐玲的帮助，透过他们设立“殷勤文教公益基金会”，筹办美国南加州留学<ahref="https://github.com/jymmdk364/djy/blob/master/gb/tag/%E5%A5%96%E5%AD%A6%E9%87%91.md#1">奖学金</a>。殷氏夫妇将对子女及下一代的呵护，延续散播给更多的台湾子弟。</p>
-<p>殷敏宽表示，成立基金会的宗旨是让这份爱能够传出去，他们不求回报，只希望获得<ahref="https://github.com/jymmdk364/djy/blob/master/gb/tag/%E5%A5%96%E5%AD%A6%E9%87%91.md#1">奖学金</a>的学生们能继续将这份善心回馈给其他人，代代相传、个个相帮。当初他们从台湾来到美国，也是靠了许多贵人的帮助，才能有今日。因此要把这份感恩的心，回馈给社会，多做公益。</p>
+<p>殷清隆和殷敏宽借助驻洛杉矶台北经济文化办事处教育组长梁俐玲的帮助，透过他们设立“殷勤文教公益基金会”，筹办美国南加州留学<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A5%96%E5%AD%A6%E9%87%91.md#1">奖学金</a>。殷氏夫妇将对子女及下一代的呵护，延续散播给更多的台湾子弟。</p>
+<p>殷敏宽表示，成立基金会的宗旨是让这份爱能够传出去，他们不求回报，只希望获得<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A5%96%E5%AD%A6%E9%87%91.md#1">奖学金</a>的学生们能继续将这份善心回馈给其他人，代代相传、个个相帮。当初他们从台湾来到美国，也是靠了许多贵人的帮助，才能有今日。因此要把这份感恩的心，回馈给社会，多做公益。</p>
 <p>殷清隆希望这个奖学金的兴办能永续经营，规模逐步扩展，就像他最擅长的“转投资”一样，让涓滴的小爱，汇成川流不息的大爱，使更多人受益。◇</p>
-<p>1月1日至3月31日止，凡家庭年收入在新台币100万元以下，就读南加地区教育部认可的公私立大学硕、博士班新生与在学台裔学子皆可申请。“<ahref="https://github.com/jymmdk364/djy/blob/master/gb/tag/%E6%AE%B7%E5%8B%A4%E6%96%87%E6%95%99%E5%9F%BA%E9%87%91%E4%BC%9A.md#1">殷勤文教基金会</a>”将提五个名额的1万美元奖学金。</p>
+<p>1月1日至3月31日止，凡家庭年收入在新台币100万元以下，就读南加地区教育部认可的公私立大学硕、博士班新生与在学台裔学子皆可申请。“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%AE%B7%E5%8B%A4%E6%96%87%E6%95%99%E5%9F%BA%E9%87%91%E4%BC%9A.md#1">殷勤文教基金会</a>”将提五个名额的1万美元奖学金。</p>
 <p>责任编辑：何林</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/15/12/18/n4598574.md#1">殷勤文教基金会奖学金 助台学子南加留学</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/20/9/30/n12441487.md#1">印度老人在树下教孩子读书75年 分文不取</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/20/9/21/n12419416.md#1">印男花30年独力开凿3公里长河渠 引水入村</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/20/5/6/n12087072.md#1">募款4千万美元 英百岁翁收到15万张生日贺卡</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/20/4/8/n12012857.md#1">口罩戴久耳朵痛？ 加拿大男童的护耳器有解</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/19/10/22/n11603846.md#1">俄9岁男童替宠物作画 换物资捐动物收容所</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/19/4/29/n11220896.md#1">肯亚男子徒手挖路穿越树林 全村人免走远路</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/19/4/28/n11218809.md#1">德国社区每年房租仅1美元 500年没涨价</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/19/4/19/n11197503.md#1">不畏霸凌做环保 英“垃圾女孩”获首相颁奖</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/19/3/28/n11146038.md#1">丹中尉带千名遗孤游迪士尼 登机门前超感人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/18/n4598574.md#1">殷勤文教基金会奖学金 助台学子南加留学</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/30/n12441487.md#1">印度老人在树下教孩子读书75年 分文不取</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/21/n12419416.md#1">印男花30年独力开凿3公里长河渠 引水入村</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/5/6/n12087072.md#1">募款4千万美元 英百岁翁收到15万张生日贺卡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/4/8/n12012857.md#1">口罩戴久耳朵痛？ 加拿大男童的护耳器有解</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/10/22/n11603846.md#1">俄9岁男童替宠物作画 换物资捐动物收容所</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/29/n11220896.md#1">肯亚男子徒手挖路穿越树林 全村人免走远路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/28/n11218809.md#1">德国社区每年房租仅1美元 500年没涨价</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/4/19/n11197503.md#1">不畏霸凌做环保 英“垃圾女孩”获首相颁奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/3/28/n11146038.md#1">丹中尉带千名遗孤游迪士尼 登机门前超感人</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10966582.md#1" target="_blank">林辉：文革一个为妻子报仇的普通军人之死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/9/n11780113.md#1" target="_blank">德国修炼者读《转法轮》见证神奇 受益良多</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/28/n10179177.md#1" target="_blank">名为开放实为开抢的邓小平理论 (上)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/29/n10261167.md#1" target="_blank">一位加拿大生物学家无止境的神奇之路</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/12/n13500792.md#1">【未解之谜】宇宙是意识的产物？！</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/14/n13505150.md#1">【百年真相】接班人到阶下囚 王洪文的官场浮沉</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/15/n13505813.md#1">顺地而建 台湾第一所无校门、无围墙的学校</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/21/12/15/n13439807.md#1">【曾国藩·乱世自警】纳妾风波</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/20/n13518546.md#1">【未解之谜】来自金星的神秘人</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/22/n13523013.md#1">【财商天下】中共央行急放水 反遭市场冷遇</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/22/n13522553.md#1">【马克时空】俄乌冲突vs台海危机 普京vs习近平</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/22/n13521492.md#1">【车评】微型的豪华 2022 Lexus UX 250h Luxury AWD</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/21/n13520357.md#1">徐立毅被立案审查 被免郑州市委书记职务</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/21/n13519401.md#1">中纪委全会8人缺席 传刘金国出事了</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/20/n13518550.md#1">中国生育率为何下降 官员新说法引网民反弹</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/20/n13518759.md#1">贾静雯深夜贴病床照 自曝紧急入院治疗原因</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/20/n13518942.md#1">舒淇IG晒大扫除视频 家居摆设意外曝光</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/21/n13521096.md#1">黄子佼想添购冷冻柜 孟耿如娇嗔回应笑翻网友</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/21/n13521362.md#1">相隔7年再演反派角色 赵丽颖道个中原因</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/20/n13519152.md#1">阿Sa自曝已立好遗嘱 每5年选换一次遗照</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/15/n13506812.md#1">新陈代谢变慢才好？营养专家：延缓老化3个秘诀</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/19/n13514374.md#1">苹果天天一颗清除胆固醇 2要诀营养不流失</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/21/n13521232.md#1">小苏打用法不给力？１秘诀清洁除臭 功效翻倍</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/20/n13518202.md#1">戒糖后 你为什么会出现不良反应？</a></li>
-<li><a href="https://github.com/jymmdk364/djy/blob/master/gb/22/1/20/n13518129.md#1">实验室测试：两种漱口水可分解新冠病毒</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/jymmdk364/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/jymmdk364/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/2/19/n4643155.htm">公益也是一种转投资 让爱传出去</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/2/19/n4643155.htm">公益也是一种转投资 让爱传出去</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/jymmdk364/djy/blob/master/gb/16/2/19/n4643155.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/jymmdk364/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/jymmdk364/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/jymmdk364/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/jymmdk364/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/jymmdk364/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/2/19/n4643155.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
